JSSParser.py
# Generated from JSS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JSSParser ( Parser ):

    grammarFileName = "JSS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'['", "']'", "'('", "')'", 
                     "','", "'class'", "'{'", "'}'", "'constructor'", "';'", 
                     "'int'", "'real'", "'str'", "'bool'", "'void'", "'let'", 
                     "'='", "'const'", "'return'", "'if'", "'else'", "'while'", 
                     "'for'", "'break'", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'||'", "'&&'", "'=='", "'!='", "'<='", "'>='", 
                     "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", 
                     "'!'", "'++'", "'--'", "'.'", "'true'", "'false'", 
                     "'null'", "'this'", "'new'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "REAL_LIT", "INT_LIT", "STR_LIT", 
                      "IDENT", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_topDecl = 1
    RULE_functionDecl = 2
    RULE_params = 3
    RULE_param = 4
    RULE_classDecl = 5
    RULE_classMember = 6
    RULE_constructorDecl = 7
    RULE_methodDecl = 8
    RULE_attrDecl = 9
    RULE_type = 10
    RULE_castType = 11
    RULE_block = 12
    RULE_statement = 13
    RULE_varDecl = 14
    RULE_varDeclNoSemi = 15
    RULE_declarator = 16
    RULE_constDecl = 17
    RULE_returnStmt = 18
    RULE_ifStmt = 19
    RULE_elseClause = 20
    RULE_whileStmt = 21
    RULE_forStmt = 22
    RULE_forInit = 23
    RULE_breakStmt = 24
    RULE_exprStmt = 25
    RULE_expr = 26
    RULE_assignOp = 27
    RULE_orExpr = 28
    RULE_andExpr = 29
    RULE_cmpExpr = 30
    RULE_cmpOp = 31
    RULE_addExpr = 32
    RULE_mulExpr = 33
    RULE_powExpr = 34
    RULE_unaryExpr = 35
    RULE_postfixExpr = 36
    RULE_argList = 37
    RULE_primary = 38

    ruleNames =  [ "program", "topDecl", "functionDecl", "params", "param", 
                   "classDecl", "classMember", "constructorDecl", "methodDecl", 
                   "attrDecl", "type", "castType", "block", "statement", 
                   "varDecl", "varDeclNoSemi", "declarator", "constDecl", 
                   "returnStmt", "ifStmt", "elseClause", "whileStmt", "forStmt", 
                   "forInit", "breakStmt", "exprStmt", "expr", "assignOp", 
                   "orExpr", "andExpr", "cmpExpr", "cmpOp", "addExpr", "mulExpr", 
                   "powExpr", "unaryExpr", "postfixExpr", "argList", "primary" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    REAL_LIT=54
    INT_LIT=55
    STR_LIT=56
    IDENT=57
    LINE_COMMENT=58
    WS=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JSSParser.EOF, 0)

        def topDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.TopDeclContext)
            else:
                return self.getTypedRuleContext(JSSParser.TopDeclContext,i)


        def getRuleIndex(self):
            return JSSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JSSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 287915366132936854) != 0):
                self.state = 78
                self.topDecl()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(JSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(JSSParser.FunctionDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(JSSParser.ClassDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(JSSParser.StatementContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_topDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopDecl" ):
                listener.enterTopDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopDecl" ):
                listener.exitTopDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDecl" ):
                return visitor.visitTopDecl(self)
            else:
                return visitor.visitChildren(self)




    def topDecl(self):

        localctx = JSSParser.TopDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDecl)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.functionDecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.classDecl()
                pass
            elif token in [2, 4, 12, 13, 14, 15, 17, 19, 20, 21, 23, 24, 25, 39, 40, 45, 46, 47, 49, 50, 51, 52, 53, 54, 55, 56, 57]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(JSSParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(JSSParser.IDENT, 0)

        def params(self):
            return self.getTypedRuleContext(JSSParser.ParamsContext,0)


        def block(self):
            return self.getTypedRuleContext(JSSParser.BlockContext,0)


        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.INT_LIT)
            else:
                return self.getToken(JSSParser.INT_LIT, i)

        def getRuleIndex(self):
            return JSSParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = JSSParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(JSSParser.T__0)
            self.state = 92
            self.type_()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 93
                self.match(JSSParser.T__1)
                self.state = 94
                self.match(JSSParser.INT_LIT)
                self.state = 95
                self.match(JSSParser.T__2)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(JSSParser.IDENT)
            self.state = 102
            self.match(JSSParser.T__3)
            self.state = 103
            self.params()
            self.state = 104
            self.match(JSSParser.T__4)
            self.state = 105
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.ParamContext)
            else:
                return self.getTypedRuleContext(JSSParser.ParamContext,i)


        def getRuleIndex(self):
            return JSSParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = JSSParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 15, 16, 57]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.param()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 108
                    self.match(JSSParser.T__5)
                    self.state = 109
                    self.param()
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(JSSParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(JSSParser.IDENT, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.INT_LIT)
            else:
                return self.getToken(JSSParser.INT_LIT, i)

        def getRuleIndex(self):
            return JSSParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = JSSParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.type_()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 119
                self.match(JSSParser.T__1)
                self.state = 120
                self.match(JSSParser.INT_LIT)
                self.state = 121
                self.match(JSSParser.T__2)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(JSSParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(JSSParser.IDENT, 0)

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(JSSParser.ClassMemberContext,i)


        def getRuleIndex(self):
            return JSSParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = JSSParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(JSSParser.T__6)
            self.state = 130
            self.match(JSSParser.IDENT)
            self.state = 131
            self.match(JSSParser.T__7)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188075982848) != 0):
                self.state = 132
                self.classMember()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(JSSParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructorDecl(self):
            return self.getTypedRuleContext(JSSParser.ConstructorDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(JSSParser.MethodDeclContext,0)


        def attrDecl(self):
            return self.getTypedRuleContext(JSSParser.AttrDeclContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassMember" ):
                return visitor.visitClassMember(self)
            else:
                return visitor.visitChildren(self)




    def classMember(self):

        localctx = JSSParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classMember)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.constructorDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.methodDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.attrDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(JSSParser.IDENT, 0)

        def params(self):
            return self.getTypedRuleContext(JSSParser.ParamsContext,0)


        def block(self):
            return self.getTypedRuleContext(JSSParser.BlockContext,0)


        def getRuleIndex(self):
            return JSSParser.RULE_constructorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorDecl" ):
                listener.enterConstructorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorDecl" ):
                listener.exitConstructorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructorDecl" ):
                return visitor.visitConstructorDecl(self)
            else:
                return visitor.visitChildren(self)




    def constructorDecl(self):

        localctx = JSSParser.ConstructorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constructorDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(JSSParser.IDENT)
            self.state = 146
            self.match(JSSParser.T__9)
            self.state = 147
            self.match(JSSParser.T__3)
            self.state = 148
            self.params()
            self.state = 149
            self.match(JSSParser.T__4)
            self.state = 150
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(JSSParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(JSSParser.IDENT, 0)

        def params(self):
            return self.getTypedRuleContext(JSSParser.ParamsContext,0)


        def block(self):
            return self.getTypedRuleContext(JSSParser.BlockContext,0)


        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.INT_LIT)
            else:
                return self.getToken(JSSParser.INT_LIT, i)

        def getRuleIndex(self):
            return JSSParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = JSSParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.type_()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 153
                self.match(JSSParser.T__1)
                self.state = 154
                self.match(JSSParser.INT_LIT)
                self.state = 155
                self.match(JSSParser.T__2)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(JSSParser.IDENT)
            self.state = 162
            self.match(JSSParser.T__3)
            self.state = 163
            self.params()
            self.state = 164
            self.match(JSSParser.T__4)
            self.state = 165
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(JSSParser.TypeContext,0)


        def IDENT(self):
            return self.getToken(JSSParser.IDENT, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(JSSParser.INT_LIT)
            else:
                return self.getToken(JSSParser.INT_LIT, i)

        def getRuleIndex(self):
            return JSSParser.RULE_attrDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrDecl" ):
                listener.enterAttrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrDecl" ):
                listener.exitAttrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrDecl" ):
                return visitor.visitAttrDecl(self)
            else:
                return visitor.visitChildren(self)




    def attrDecl(self):

        localctx = JSSParser.AttrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attrDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.type_()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 168
                self.match(JSSParser.T__1)
                self.state = 169
                self.match(JSSParser.INT_LIT)
                self.state = 170
                self.match(JSSParser.T__2)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(JSSParser.IDENT)
            self.state = 177
            self.match(JSSParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(JSSParser.IDENT, 0)

        def getRuleIndex(self):
            return JSSParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = JSSParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188075982848) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CastTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JSSParser.RULE_castType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCastType" ):
                listener.enterCastType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCastType" ):
                listener.exitCastType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCastType" ):
                return visitor.visitCastType(self)
            else:
                return visitor.visitChildren(self)




    def castType(self):

        localctx = JSSParser.CastTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_castType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSParser.StatementContext)
            else:
                return self.getTypedRuleContext(JSSParser.StatementContext,i)


        def getRuleIndex(self):
            return JSSParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = JSSParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(JSSParser.T__7)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 287915366132936724) != 0):
                self.state = 184
                self.statement()
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 190
            self.match(JSSParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(JSSParser.VarDeclContext,0)

